create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -558,6 +558,7 @@ h6,
 #gallery2-6 LI {
   text-align: center;
   font-size: 14px;
+  color: #ffffff;
 }
 #social-buttons1-d .mbr-section-title {
   font-size: 19px;
